[2015-10-xx]
Version 0.7.4 UNRELEASED


[2015-10-07]
Version 0.7.3

- Bug fixes:

  * [cmdline] Correctly calculate the indentation for multi-byte encoded strings
    in command line "show" (Closes: #360202)

  * [curses] Show intended action when downgrading (Closes: #516517)

    In package view/info screen, it was not handling this action and not showing
    anything in this case.

  * Update internal state for upgrades/downgrades with target version after the
    action is performed (Closes: #787658, #714429)

    Thanks to David Kalnischkies and Julian Andres Klode from APT team for their
    help, clues and patience.  It took some serious effort to get to this fix,
    which in the end is quite modest in terms of code changes.

    Internal state was neither reset nor written to disk until other packages'
    states changed, so aptitude marked the same action on the packages as
    pending to be performed again and again (but the action had already been
    taken, so there was no observable effect in terms of installations).

    However, this meant that the packages that were downgraded to older versions
    when newer were still available (e.g., mixing stable and unstable), was not
    shown as "Upgradable" neither in the current sessions nor in subsequent
    sessions (under Upgradable subtree in interactive mode; or command line like
    "aptitude search ~U"), until the file pkgstates was written to disk because
    of changes in other packages.

  * [curses] Don't precede Tags field by newline in package info screen
    (Closes: #799933)

  * Correctly detect state of vers/pkg when is ConfigFiles (Closes: #698768)

  * [cmdline] Show "RECOMMENDED but will not be installed" on pipes and redirs
    (Closes: #647474)

    The change was requested in #452202 in 2007 to not show this message and was
    applied, but after that there are at least 3 separate requests (#647474,
    #587676 and #720074) asking to show the same messages independently if the