@@ -1,6 +1,14 @@
 [2015-10-xx]
 Version 0.7.4 UNRELEASED
 
+- User visible changes:
+
+  * [cmdline] In versioned provides, include '=' symbol (Closes: #767393)
+
+    At the moment, there is only one symbol ('='), and it is hardcoded in dpkg
+    and apt, so doing the same to avoid possible confusion among users, as
+    suggested by David Kalnischkies from APT Team.
+
 
 [2015-10-07]
 Version 0.7.3
